--- a/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MainWindow.xaml
+++ b/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MainWindow.xaml
@@ -11,8 +11,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <Label Content="To Launch:" HorizontalAlignment="Left" Margin="22,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="OutputFile_TextBox" HorizontalAlignment="Left" Height="23" Margin="99,180,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="296"/>
-        <TextBox x:Name="InputFile_TextBox" HorizontalAlignment="Left" Height="23" Margin="99,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="296"/>
+        <TextBox x:Name="OutputFile_TextBox" HorizontalAlignment="Left" Height="23" Margin="99,180,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="296"/>
+        <TextBox x:Name="InputFile_TextBox" HorizontalAlignment="Left" Height="23" Margin="99,152,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="296"/>
         <Label Content="Input File:" HorizontalAlignment="Left" Margin="22,152,0,0" VerticalAlignment="Top"/>
         <Label Content="Output File:" HorizontalAlignment="Left" Margin="22,183,0,0" VerticalAlignment="Top"/>
         <Button x:Name="InputFile_Button" Content="Browse" HorizontalAlignment="Left" Margin="410,152,0,0" VerticalAlignment="Top" Width="75" Click="InputFile_Button_Click"/>
