--- a/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MainWindow.xaml
+++ b/Visual Studio/MGEDConsoleLauncher/MGEDConsoleLauncher/MainWindow.xaml
@@ -21,7 +21,7 @@
         <TextBox x:Name="OutputFile_TextBox_Copy" HorizontalAlignment="Left" Height="23" Margin="33,251,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="362"/>
         <Button x:Name="Launch_Button" Content="Execute" HorizontalAlignment="Left" Margin="410,290,0,0" VerticalAlignment="Top" Width="75" Click="Launch_Button_Click"/>
         <GroupBox Header="Results" HorizontalAlignment="Left" Margin="44,355,0,0" VerticalAlignment="Top" Height="189" Width="441">
-            <TextBlock Margin="0,0,-2,0" Name="TextBlock_Output" TextWrapping="Wrap" />
+            <TextBox  Margin="0,0,-2,0" Name="TextBlock_Output" TextWrapping="Wrap" />
         </GroupBox>
 
     </Grid>
