--- a/Visual Studio/FFTW/FFTWViewer/MainWindow.xaml
+++ b/Visual Studio/FFTW/FFTWViewer/MainWindow.xaml
@@ -20,7 +20,7 @@
         </Menu>
         <TextBox Name="TextBox_LoadedFile" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="102,49,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="570"/>
         <Button Content="Load Input..." HorizontalAlignment="Left" Margin="22,49,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <charts:Chart Name="exampleChart" Palette="{StaticResource palette}" Margin="22,90,42,36">
+        <charts:Chart Name="exampleChart" Palette="{StaticResource palette}" Margin="22,98,42,28">
             <charts:Chart.XAxis>
                 <charts:LinearAxis/>
             </charts:Chart.XAxis>
@@ -33,8 +33,10 @@
             </charts:Chart.YAxis>
             <charts:Chart.Series>
                 <charts:LineSeries LineStroke="Black"/>
-                <charts:LineSeries LineStroke="Green"/>
+                <charts:LineSeries LineStroke="Green" RenderTransformOrigin="0.494,0.657"/>
             </charts:Chart.Series>
         </charts:Chart>
+        <Slider x:Name="slider" HorizontalAlignment="Left" Margin="22,72,0,0" VerticalAlignment="Top" Height="21" Width="676" ValueChanged="slider_ValueChanged" />
+        <TextBox x:Name="TextBox_Value" HorizontalAlignment="Left" Height="23" Margin="717,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="33"/>
     </Grid>
 </Window>
