--- a/Visual Studio/FFTW/FFTWViewer/MainWindow.xaml
+++ b/Visual Studio/FFTW/FFTWViewer/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="FFTWViewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="450" Width="800"
-        xmlns:charts="clr-namespace:Visiblox.Charts;assembly=Visiblox.Charts">
+        Title="MainWindow" Height="768" Width="1027"
+        xmlns:charts="clr-namespace:Visiblox.Charts;assembly=Visiblox.Charts" Loaded="Window_Loaded_1">
     <Window.Resources>
         <DropShadowEffect x:Key="dropShadow"/>
         <charts:Palette x:Key="palette">
@@ -20,7 +20,7 @@
         </Menu>
         <TextBox Name="TextBox_LoadedFile" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="102,49,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="570"/>
         <Button Content="Load Input..." HorizontalAlignment="Left" Margin="22,49,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <charts:Chart Name="exampleChart" Palette="{StaticResource palette}" Margin="22,98,42,28">
+        <charts:Chart Name="exampleChart" Palette="{StaticResource palette}" Margin="22,187,42,28">
             <charts:Chart.XAxis>
                 <charts:LinearAxis/>
             </charts:Chart.XAxis>
@@ -38,5 +38,11 @@
         </charts:Chart>
         <Slider x:Name="slider" HorizontalAlignment="Left" Margin="22,72,0,0" VerticalAlignment="Top" Height="21" Width="676" ValueChanged="slider_ValueChanged" />
         <TextBox x:Name="TextBox_Value" HorizontalAlignment="Left" Height="23" Margin="717,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="33"/>
+        <ComboBox SelectedIndex="0" HorizontalAlignment="Left" Margin="797,145,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem Content="Raw Input" />
+            <ComboBoxItem Content="Raw Input w/ FFT" />
+            <ComboBoxItem Content="Raw Input - FFT" />
+        </ComboBox>
+        <Label Content="View:" HorizontalAlignment="Left" Margin="739,141,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
