--- a/Visual Studio/FFTW/FFTWViewer/MainWindow.xaml
+++ b/Visual Studio/FFTW/FFTWViewer/MainWindow.xaml
@@ -38,10 +38,7 @@
         </charts:Chart>
         <Slider x:Name="slider" HorizontalAlignment="Left" Margin="22,72,0,0" VerticalAlignment="Top" Height="21" Width="676" ValueChanged="slider_ValueChanged" />
         <TextBox x:Name="TextBox_Value" HorizontalAlignment="Left" Height="23" Margin="717,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="33"/>
-        <ComboBox SelectedIndex="0" HorizontalAlignment="Left" Margin="797,145,0,0" VerticalAlignment="Top" Width="120">
-            <ComboBoxItem Content="Raw Input" />
-            <ComboBoxItem Content="Raw Input w/ FFT" />
-            <ComboBoxItem Content="Raw Input - FFT" />
+        <ComboBox x:Name="ComboBox_Input" SelectedIndex="0" HorizontalAlignment="Left" Margin="797,145,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_Input_SelectionChanged">
         </ComboBox>
         <Label Content="View:" HorizontalAlignment="Left" Margin="739,141,0,0" VerticalAlignment="Top"/>
     </Grid>
